<resources>
    <string name="app_name">Vitabu</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_profile">My Profile</string>
    <string name="edit_profile_save_button">Save</string>
    <string name="user_profile_review_button">See User Reviews</string>
    <string name="edit_profile_cancel_button">Cancel</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_register_button_text">Register</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="browse_books_bottom_nav_menu_requests">Requests</string>
    <string name="browse_books_bottom_nav_menu_browse">Browse</string>
    <string name="browse_books_bottom_nav_menu_add_book">Add Book</string>
    <string name="browse_books_bottom_nav_menu_notifications">Notifications</string>
    <string name="browse_books_bottom_nav_menu_owned_books">My Books</string>
    <string name="browse_books_book_title">Title: </string>
    <string name="browse_books_book_author">Author: </string>
    <string name="browse_books_book_status">Status: </string>
    <string name="browse_books_book_borrower">Borrower: </string>
    <string name="browse_books_title">Browse Books</string>
    <string name="owned_books_title">My Books</string>
    <string-array name="owned_books_status_array">
        <item>available</item>
        <item>requested</item>
        <item>accepted</item>
        <item>borrowed</item>
        <item>borrowing</item>
    </string-array>
    <string-array name="requested_books_status_array">
        <item>requested</item>
        <item>accepted</item>
    </string-array>
    <string name="add_book_header">Add Book</string>
    <string name="add_book_title_text">Title:</string>
    <string name="add_book_author_text">Author:</string>
    <string name="add_book_isbn_text">ISBN:</string>
    <string name="add_book_isbn_button">Scan ISBN</string>
    <string name="add_book_description_input">Description (not required)</string>
    <string name="add_book_submit_button">Add Book</string>
    <string name="add_book_required">(required)</string>
    <string name="add_book_add_image_text">Add Image (not required):</string>
    <string name="add_book_add_image_button">Add Image</string>
    <string name="register_header">Register</string>
    <string name="register_username">User Name</string>
    <string name="register_email">Email</string>
    <string name="register_reenter_password">Re-enter Password</string>
    <string name="register_city">City</string>
    <string name="register_register_button">Register</string>
    <string name="register_password">Password</string>
    <string name="register_information">Please fill in every field before submitting.</string>
    <string name="book_info_title">Book Info</string>
    <string name="book_info_view_owner_button_text">View Owner</string>
    <string name="book_info_request_book_button_text">Request Book</string>
    <string name="book_info_book_title">Title</string>
    <string name="book_info_book_author">Author</string>
    <string name="book_info_view_goodreads_page">View Goodreads Page</string>
    <string name="set_meeting_title">Set Meeting</string>
    <string name="set_meeting_set_time_button_text">Set Time</string>
    <string name="set_meeting_set_date_button_text">Set Date</string>
    <string name="set_meeting_email_hint">Email</string>
    <string name="set_meeting_phone_hint">Phone Number</string>
    <string name="set_meeting_notes_hint">Notes</string>
    <string name="set_meting_confirm_button">Confirm</string>
    <string name="search_books_title">Search</string>
    <string name="search_books_author_text">Author: </string>
    <string name="search_books_author_hint">Author</string>
    <string name="search_books_title_text">Title: </string>
    <string name="search_books_title_hint">Title</string>
    <string name="search_books_isbn_text">ISBN: </string>
    <string name="search_books_isbn_hint">ISBN</string>
    <string name="search_books_keywords_text">Keywords: </string>
    <string name="search_books_keywords_hint">Keywords</string>
    <string name="search_books_search_button_text">Search</string>
    <string name="user_profile_location">general location</string>
    <string name="user_profile_username">username</string>
    <string name="user_profile_email">email</string>
    <string name="user_profile_borrower_rating">Borrower Rating:</string>
    <string name="user_profile_owner_rating">Owner Rating:</string>
    <string name="user_profile_joined_on">Joined On:</string>
    <string name="book_requests_book_name">Pending requests for: BOOK NAME HERE</string>
    <string name="book_status_filter_title">Filter by:</string>
    <string name="book_status_requests_title">Requests</string>
    <string name="user_profile_books_borrowed">Number of Books Borrowed: %1$d</string>
    <string name="user_profile_books_owned">Number of Books Owned: %1$d</string>
    <string name="user_profile_owner_review_button">See Owner Reviews</string>
    <string name="user_profile_borrower_review_button">See Borrower Reviews</string>
    <string name="review_item_borrowname">borrower_name</string>
    <string name="review_item_date">date</string>
    <string name="review_item_rating">10</string>
    <string name="review_item_body">review text</string>
    <string name="user_review_no_data">No reviews have been written for this user</string>
    <string name="isbn_take_picture">Capture ISBN</string>
    <string name="isbn_barcode_fail">Could not set up the detector</string>
    <string name="isbn_barcode_success">Detector Setup</string>
    <string name="isbn_no_ISBN_fail">No ISBN detected</string>
    <string name="write_review_of_name">Review of: %1$s</string>
    <string name="write_review_hint">Write a review here</string>
    <string name="write_review_rating">Rating:</string>
    <string name="write_review_submit">Submit Review</string>
    <string name="write_review_success">Review Submitted</string>
    <string name="notifications_no_data">No Notifications</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_request_error">The user is no longer requesting this book</string>
    <string name="notifications_accept_error">The user is no longer accepting your request</string>
    <string name="title_activity_book_status_owner">bookStatusOwnerActivity</string>
    <string name="book_status_borrower_book_title">title</string>
    <string name="book_status_borrower_book_author">author</string>
    <string name="book_status_borrower_book_comment">comment</string>
    <string name="book_status_borrower_book_owner">owner</string>
    <string name="book_status_to_owner_switch">"borrow "</string>
    <string name="book_status_borrower_filter_by">Filter by:</string>
    <string name="book_status_owner_book_title">title</string>
    <string name="book_status_owner_book_author">author</string>
    <string name="book_status_owner_book_comment">comment</string>
    <string name="book_status_owner_extra">view requests</string>
    <string name="book_status_to_borrow_switch">"borrow "</string>
    <string name="book_status_owner_filter_by">Filter by:</string>
    <string name="book_requests_accept_button">accept</string>
    <string name="book_requests_decline_button">decline</string>
    <string name="book_requests_requester_username">username</string>
    <string name="book_info_isbn">123567890</string>
    <string name="edit_book_delete">Delete Image</string>
    <string name="edit_book_add">Add Image</string>
    <string name="edit_book_remove">Delete</string>
    <string name="get_meeting_title">Meeting Information</string>
    <string name="get_meeting_time">Time: 19:03</string>
    <string name="get_meeting_date">Date: 2019-02-06</string>
    <string name="get_meeting_owner_email_title">Owner\'s Email</string>
    <string name="get_meeting_owner_phone_title">Owner\'s Phone</string>
    <string name="get_meeting_owner_notes_title">Owner\'s Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requested_books_requests_title">Requests</string>
    <string name="requested_books_filter_title">Filter by:</string>
    <string name="requested_book_title">title</string>
    <string name="requested_books_book_author">author</string>
    <string name="requested_books_book_title">title</string>
    <string name="requested_books_book_comment" translatable="false">comment</string>
    <string name="requested_books_book_owner">"Owner: "</string>
    <string name="return_book_title">title</string>
    <string name="return_book_author">author</string>
    <string name="return_book_view_owner_button">View Owner</string>
    <string name="return_book_ISNBtitle">ISBN:</string>
    <string name="return_book_isbn">1234567890</string>
    <string name="return_book_button">Return Book</string>
    <string name="return_book_book_desc" />
    <string name="return_book_info_view_goodreads_page">View Goodreads Page</string>
    <string name="accept_book_view_requester_profile">View Profile</string>
    <string name="book_request_accept_button">Accept</string>
    <string name="book_requests_view_profile">view profile</string>
    <string name="return_book_header">Return Book</string>
    <string name="return_book_title_text">Title:</string>
    <string name="return_book_title_input">(field will be autopopulated)</string>
    <string name="return_book_author_text">Author:</string>
    <string name="return_book_author_input">(field will be autopopulated)</string>
    <string name="return_book_isbn_text">ISBN:</string>
    <string name="return_book_isbn_input">(field will be autopopulated)</string>
    <string name="return_book_isbn_scan_button">return book</string>
    <string name="search_books_book_title_text">Title</string>
    <string name="search_books_book_author_text">Author</string>
    <string name="search_books_book_status">available</string>
    <string name="search_books_book_status_text">Status:</string>
    <string name="search_book_text">displaying search results for:</string>
    <string name="search_results_title_text">Title:</string>
    <string name="search_results_title">Book Title</string>
    <string name="search_results_author_text">Author:</string>
    <string name="search_results_author">Author Name</string>
    <string name="search_results_isbn_text">ISBN:</string>
    <string name="search_results_isbn">0123456789</string>
    <string name="search_results_keywords_text">Keywords:</string>
    <string name="search_results_keywords">keywords list here</string>
    <string name="accept_book_header">Accept Book</string>
    <string name="accept_book_title_text">Title:</string>
    <string name="accept_book_title_input">autopopulate field w/ title</string>
    <string name="accept_book_author_text">Author:</string>
    <string name="accept_book_author_input">autopopulate field w/ author</string>
    <string name="accept_book_isbn_text">ISBN:</string>
    <string name="accept_book_isbn_input">autopopulate field w/ isbn</string>
    <string name="accept_book_isbn_scan_button">Accept Book</string>
    <string name="requested_books_book_title_text">Title:</string>
    <string name="requested_books_book_author_text">Author:</string>
    <string name="requested_fragment_book_title_text">Title:</string>
    <string name="requested_fragment_book_author_text">Author:</string>
    <string name="requested_fragment_book_owner_text">Owner:</string>
    <string name="requested_fragment_book_title" />
    <string name="requested_fragment_book_author" />
    <string name="requested_fragment_book_owner" />
    <string name="book_requests_decline_text">Decline</string>
</resources>