<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchBookResultsActivity">

    <TextView
        android:id="@+id/search_results_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_title_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_results_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_title"
        app:layout_constraintStart_toEndOf="@+id/search_results_title_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_results_author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_author_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results_title_text" />

    <TextView
        android:id="@+id/search_results_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_author"
        app:layout_constraintStart_toEndOf="@+id/search_results_author_text"
        app:layout_constraintTop_toBottomOf="@+id/search_results_title" />

    <TextView
        android:id="@+id/search_results_isbn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_isbn_text"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/search_results_author"
        app:layout_constraintTop_toBottomOf="@+id/search_results_title" />

    <TextView
        android:id="@+id/search_results_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_isbn"
        app:layout_constraintStart_toEndOf="@+id/search_results_isbn_text"
        app:layout_constraintTop_toBottomOf="@+id/search_results_title" />

    <TextView
        android:id="@+id/search_results_keywords_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_keywords_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results_author_text" />

    <TextView
        android:id="@+id/search_results_keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_results_keywords"
        app:layout_constraintStart_toEndOf="@+id/search_results_keywords_text"
        app:layout_constraintTop_toBottomOf="@+id/search_results_author" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results_list"
        android:layout_width="match_parent"
        android:layout_height="458dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results_keywords_text" />
</android.support.constraint.ConstraintLayout>