<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/review_item_borrower_name"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/review_item_borrowname"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/review_item_date"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/review_item_borrower_name"
        android:text="@string/review_item_date"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/review_item_rating"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp"
        android:text="@string/review_item_rating"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/review_item_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/review_item_date"
        android:singleLine="false"
        android:text="@string/review_item_body"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</RelativeLayout>